# decision_analysis

./: README.md  requirements.txt  setup.cfg
example/: venice_trip.py
examples/venice_trip/: README.md  comparisons.py  dominated_alternatives.py  electre_tri_b_results.py  load_data.py  promethee_results.py  uta_promethee_comparison.py  uta_ranking.py
src/decision_analysis/decision_making/: __init__.py  alternative.py  criterion.py  dataset.py  electre_tri_b.py  electre_trib.py  promethee.py  ranking.py  srf.py  uta.py  utils.py
src/decision_analysis/decision_making/base/: __init__.py  criterion.py  dataset.py  value_function.py
src/decision_analysis/decision_making/data_structures/: __init__.py  alternative.py  criterion.py  dataset.py  ranking.py  value_function.py
src/decision_making/: __init__.py  critera.py  electre_trib.py  promethee.py  srf.py
tests/: test_alternative.py  test_criterion.py  test_electre_tri_b.py  test_ranking.py  test_srf.py  test_uta.py  test_utils.py  test_value_function.py
