[metadata]
name = decision_analysis
description = package with decision analysis algorithms
author = Pablo Arino & Alvaro Laguna
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    decision_analysis.decision_making
install_requires =
    numpy>=1.17.2
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
addopts =
	--color=yes